---
title: Diagrama de classes TapatApp | Prototip 1
---
classDiagram
    User "" --> "0..N" Child   
    Child "" --> "1..1" Treatement
    Child "" --> "0..N" Tap

    class User{
        -int id
        +String userName
        -String password
        -String email
        +informacióTractamentInfant(): void
        +assignarRolAltreUser(): void
        +iniciarSessio(): boolean
    }

    class Tap{
        -int id
        -int status
        -datetime init 
        -datetime end 
    }

    class Child{
        -int id
        +int sleep_average
        +String child_name
        +consultarTractament(): obj Tractament
        +consultarTap

    }

    class Treatement{
        -int id
        +String name
    }